--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,32 +1,50 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
-
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+	padding: 20px;
+	img {
+		height: 5em;
+	}
 }
 
-.App-header {
-  background-color: #FFFF00;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.root {
+	flex-grow: 1;
+	padding: 0;
 
-.App-link {
-  color: #61dafb;
-}
+	.sidebar {
+		z-index: 1;
+	}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	.paper {
+		height: 100vh;
+		width: 100%;
+	}
+
+	.root-menu-list {
+		.root-menu-icon {
+			height: 20px;
+		}
+	}
+
+	.root-menu-item {
+		border-left: 5px solid #ffffff;
+	}
+
+	.post-list{
+		.post-list-header{
+			text-align: left;
+			padding: 2em;
+			font-weight: 700
+		}
+	
+		.post-list-items {
+			text-align: left;
+			.post-list-item {
+				position: relative;
+				padding: 2em;
+			}
+		}
+	}
+
 }
